--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
       ],
       "icon": "icon.ico"
     },
+
+    "linux": {
+      "target": "AppImage",
+      "icon": "icon.png"
+    },
+
     "nsis": {
       "oneClick": false,
       "perMachine": false,
