--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -2,29 +2,73 @@ name: Build Linux AppImage
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgtk-3-0 \
+            libnotify4 \
+            libnss3 \
+            libxss1 \
+            libxtst6 \
+            xvfb \
+            libatspi2.0-0 \
+            libdrm2 \
+            libgbm1 \
+            libxcb-dri3-0 \
+            fuse \
+            libfuse2
+
+      - name: Install npm dependencies
+        run: npm ci
 
       - name: Build Vite project
         run: npm run build
 
       - name: Build Electron AppImage
         run: npm run electron:build
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: List build output
+        run: |
+          echo "=== Listing dist directory ==="
+          ls -lah dist/ || true
+          echo "=== Searching for AppImage files ==="
+          find . -name "*.AppImage" -type f
 
       - name: Upload AppImage
         uses: actions/upload-artifact@v4
         with:
-          name: AppImage
-          path: dist/*.AppImage
+          name: linux-appimage
+          path: |
+            dist/*.AppImage
+            dist/**/*.AppImage
+          if-no-files-found: error
+
+      - name: Upload to Release (if tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            dist/*.AppImage
+            dist/**/*.AppImage
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
