Update Electron build command for Linux

--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm run build
 
       - name: Build Electron AppImage
-        run: npm run electron:build
+        run: npm run electron:build:linux
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
