--- a/.github/workflows/release_linux.yml
+++ b/.github/workflows/release_linux.yml
@@ -37,7 +37,7 @@ jobs:
             libfuse2
 
       - name: Install npm dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build Vite project
         run: npm run build
