Add build icon and category to package.json
Added 'build/icon.png' to the files and linux sections.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "productName": "Calculator",
     "files": [
       "dist/**/*",
-      "electron/**/*"
+      "electron/**/*",
+      "build/icon.png"
     ],
     "directories": {
       "buildResources": "build"
@@ -39,7 +40,8 @@
 
     "linux": {
       "target": "AppImage",
-      "icon": "build/icon.png"
+      "icon": "build/icon.png",
+      "category": "Utility"
     },
 
     "nsis": {
