--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 
     "linux": {
       "target": "AppImage",
-      "icon": "icon.png",
+      "icon": "build/icon",
       "category": "Utility"
     },
 
