--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
 
     "linux": {
       "target": "AppImage",
-      "icon": "build/icon",
+      "icon": "build/icon.png",
       "category": "Utility"
     },
 
