--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "files": [
       "dist/**/*",
       "electron/**/*",
-      "build/icon.png"
+      "build/icons/**/*"
     ],
     "directories": {
       "buildResources": "build",
@@ -41,8 +41,13 @@
 
     "linux": {
       "target": "AppImage",
-      "icon": "build/icon.png",
+      "icon": "build/icons",
       "category": "Utility"
+    },
+
+    "mac": {
+      "target": "dmg",
+      "icon": "build/icon.icns"
     },
 
     "nsis": {
