--- a/TicTacToeElectron/package.json
+++ b/TicTacToeElectron/package.json
@@ -20,6 +20,7 @@
   "build": {
     "appId": "com.glebgorlanov.tictactoe",
     "productName": "Tic-Tac-Toe",
+    "publish": null,
     "files": [
       "**/*",
       "!node_modules/**/*"
