--- a/Calculator Electron/package.json
+++ b/Calculator Electron/package.json
@@ -20,6 +20,7 @@
   "build": {
     "appId": "com.calculator.one",
     "productName": "Calculator",
+    "publish": null,
     "files": [
       "dist/**/*",
       "electron/**/*",
