--- a/Calculator Electron/package.json
+++ b/Calculator Electron/package.json
@@ -41,7 +41,7 @@
     },
 
     "linux": {
-      "target": "AppImage",
+      "target": ["AppImage", "deb"],
       "icon": "build/icons",
       "category": "Utility"
     },
