--- a/Calculator Electron/package.json
+++ b/Calculator Electron/package.json
@@ -40,7 +40,7 @@
       "icon": "icon.ico"
     },
     "linux": {
-      "target": "AppImage",
+      "target": ["AppImage", "deb"],
       "icon": "build/icons",
       "category": "Utility"
     },
