--- a/.github/workflows/build-calculator-web.yml
+++ b/.github/workflows/build-calculator-web.yml
@@ -1,30 +1,37 @@
-name: Развертывание на GitHub Pages
+name: Calculator Web CI/CD
+
 on:
   push:
-    branches:
-      - main
-permissions:
-  contents: write
-  pages: write
+    branches: [ main, develop ]
+    paths:
+      - 'Calculator Web/**'
+  pull_request:
+    branches: [ main ]
+    paths:
+      - 'Calculator Web/**'
+
 jobs:
-  deploy:
+  build-and-test:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - name: Настройка Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Установка зависимостей
-        run: npm install
-      - name: Сборка
-        run: npm run build
-      - name: Развертывание
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: dist
-          token: ${{ secrets.GITHUB_TOKEN }}
-          clean: true
-          force: true
-          attempt-limit: 3
+    - name: Checkout code
+      uses: actions/checkout@v3
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+    
+    # ВАЖНО: переходим в папку проекта перед npm install
+    - name: Install dependencies
+      working-directory: ./Calculator Web
+      run: npm install
+    
+    - name: Run tests (if any)
+      working-directory: ./Calculator Web
+      run: npm test --if-present
+    
+    - name: Build project (if needed)
+      working-directory: ./Calculator Web
+      run: npm run build --if-present
